--- a/dev_src/index.html
+++ b/dev_src/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>联机·鼠标</title>
+    <script>
+        var parcelRequire;
+    </script>
 </head>
 
 <body>
     <p id="state"></p>
-    <script src="/lib//client-dist/socket.io.js"></script>
-    <script src="/lib//client-dist/socket.io.msgpack.min.js"></script>
-    <script src="/index.js"></script>
+    <!-- <script src="/lib//client-dist/socket.io.js"></script> -->
+    <script src="/index.js" type="module"></script>
 </body>
 
 </html>
